# harel

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
bench/: RESULTS.md  bench_async.py  bench_dbos.py  bench_shards.py  bench_workers.py
deploy/: Dockerfile  Dockerfile.lambda  README.md  demo_actions.py  docker-compose.yml  faas_function.py
deploy/definitions/: boom.stm  critical.stm  flat.stm  ortho.stm  retry.stm  retry_budget.stm
docs/: conf.py  index.md  requirements.txt
docs/guide/: api-reference.md  architecture.md  cli.md  control-plane.md  distribution.md  dsl-reference.md  durability.md  faas.md  monitor.md  resolvers.md  stores.md  transports.md  visualization.md
docs/guide/stores/: dict.md  dynamodb.md  libsql.md  mongo.md  postgres.md  redis.md  rqlite.md  sqlite.md
docs/guide/transports/: inmemory.md  libsql.md  mongo.md  postgres.md  redis.md  rqlite.md  sqlite.md  sqs.md
docs/tutorial/: 01-getting-started.md  02-actions.md  03-outcomes.md  04-guards.md  05-selectors.md  06-hierarchy.md  07-timers.md  08-orthogonal.md  09-fragments.md  10-imports.md  11-invoke.md  12-fanout.md  13-payloads.md  14-validation.md  15-deferred-events.md
editor/vscode/: .vscodeignore  README.md  language-configuration.json  package.json
editor/vscode/media/: preview.js
editor/vscode/src/: extension.js
editor/vscode/syntaxes/: stm.tmLanguage.json
examples/minimal/: README.md  approval.stm  run.py
examples/monitor_demo/: seed.py
examples/monitor_demo/machines/: fulfillment.stm  order.stm
examples/nicegui_wizard/: .gitignore  README.md  actions.py  app.py  requirements.txt  wizard.stm
examples/place_order/: README.md  actions.py  order.stm  run.py
examples/webhook_payment/: README.md  actions.py  app.py  payment.stm  requirements.txt  simulate.py  worker.py
src/harel/: __init__.py  _log.py  cli.py  config.py  faas.py  fmt.py  idempotency.py  lib.py  worker.py
src/harel/definition/: builder.py  events.py  model.py  normalize.py  validate.py
src/harel/dsl/: __init__.py  grammar.lark  loader.py  parser.py  resolve.py
src/harel/engine/: __init__.py  aio_store.py  aio_transport.py  control.py  core.py  distributed.py  durable.py  execution.py  resolve.py  runtime.py  store.py  transport.py
src/harel/engine/aio/: __init__.py  control.py  distributed.py  driver.py  durable.py  facade.py
src/harel/engine/aio_store/: __init__.py  _base.py  dict.py  dynamodb.py  libsql.py  mongo.py  postgres.py  redis.py  rqlite.py  sqlite.py
src/harel/engine/aio_transport/: __init__.py  _base.py  inmemory.py  libsql.py  mongo.py  postgres.py  redis.py  rqlite.py  sqlite.py  sqs.py
src/harel/engine/store/: __init__.py  _base.py  dict.py  dynamodb.py  libsql.py  mongo.py  postgres.py  redis.py  rqlite.py  sqlite.py
src/harel/engine/transport/: __init__.py  _base.py  inmemory.py  libsql.py  mongo.py  postgres.py  redis.py  rqlite.py  sqlite.py  sqs.py
src/harel/lsp/: __init__.py  __main__.py  diagnostics.py  preview.py  server.py  symbols.py
src/harel/spec/: states.py
src/harel/tui/: __init__.py  __main__.py  app.py  model.py  resolve.py  screens.py  summary.py  trace.py  tree.py  widgets.py
src/harel/viz/: mermaid.py  plantuml.py
test/: listing_contract.py  order_actions.py  scenarios.py  stm_actions.py
test/data/: base.stm  charge.stm  charge_retry.stm  fanout.stm  invoke.stm  join_outcome.stm  join_sugar.stm  order.stm  orthogonal.stm  retry.stm  review.stm
test/integration/: README.md  _worker_main.py  test_async_mongo.py  test_async_postgres.py  test_async_rqlite.py  test_compose_stack.py  test_distributed_workers.py  test_dynamodb_store.py  test_faas_lambda.py  test_mongo_store.py  test_multiprocess_workers.py  test_postgres_store.py  test_rqlite_store.py  test_store_listing.py  test_surreal_store.py
test/unit/: test_config.py  test_lib.py
test/unit/cli/: test_cli.py  test_new.py
test/unit/definition/: test_definition.py  test_definition_builder.py  test_validate.py
test/unit/docs/: test_docs_examples.py
test/unit/dsl/: test_dsl.py  test_errors.py  test_fmt.py  test_fmt_cli.py  test_fragment_nesting.py  test_resolve.py
test/unit/engine/: test_action_error.py  test_battery.py  test_concurrent_spawns.py  test_control.py  test_deferred_events.py  test_distributed.py  test_durable.py  test_dynamodb_store.py  test_engine_parity.py  test_engine_semantics.py  test_event_filter.py  test_execution.py  test_idempotency.py  test_lifecycle_payload.py  test_mongo_store.py  test_mongo_transport.py  test_order.py  test_outcomes.py  test_priority.py  test_redis_store.py  test_redis_transport.py  test_reentry.py  test_region_hooks.py  test_region_results.py  test_reset_regions.py  test_sqs_priority.py  test_store.py  test_store_listing.py  test_submachine.py  test_surreal_store.py  test_surreal_transport.py  test_timers.py  test_trace.py  test_transport.py
test/unit/engine/aio/: test_async_distributed.py  test_async_dynamodb.py  test_async_libsql.py  test_async_parity.py  test_async_redis.py  test_async_sqlite.py  test_async_surreal.py  test_load_for_event.py  test_trace_async.py  test_worker_async.py
test/unit/examples/: test_wizard.py
test/unit/faas/: test_faas.py  test_faas_http_server.py
test/unit/lsp/: test_diagnostics.py  test_render.py  test_server.py  test_symbols.py
test/unit/tui/: test_app.py  test_model.py  test_resolve.py  test_summary.py  test_tree.py
test/unit/viz/: test_mermaid.py  test_plantuml.py
