[project]
name = "harel"
dynamic = ["version"]
description = "Durable, distributed statecharts for Python"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Alberto Casado" }]
keywords = ["statechart", "state-machine", "uml", "hsm", "workflow", "durable-execution", "dsl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
requires-python = ">=3.11,<4"
dependencies = [
    "lark>=1.2,<2",
    "pydantic>=2,<3",
    "structlog",
    # the sync API (Driver/DurableRunner) is a thin facade over the async core; anyio's
    # BlockingPortal bridges sync->async (one background loop), the way Starlette/FastAPI do
    "anyio>=4,<5",
    # the async SqliteStore/Transport (the default durable backend) over aiosqlite
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
# the RedisTransport / RedisStore backend; the client is injected, so this is only
# needed to talk to a real Redis (tests use fakeredis from the dev group)
redis = ["redis>=5,<9"]
# the PostgresStore backend (distributed-SQL); validated via the docker-compose stack
postgres = ["psycopg[binary]>=3,<4", "psycopg-pool>=3,<4"]
# the RqliteStore backend (distributed SQLite over rqlite's HTTP API)
rqlite = ["requests>=2,<3", "httpx>=0.27"]
# the LibsqlStore / LibsqlTransport backend over libSQL (Turso's SQLite fork). The `libsql`
# package is an embeddable sqlite3-compatible driver: a local file, a `sqld` server, or an
# embedded replica synced with a Turso primary — all by the same connection.
libsql = ["libsql>=0.1"]
# the MongoStore / MongoTransport backend; the client is injected, so this is only
# needed to talk to a real MongoDB (tests use mongomock from the dev group)
mongo = ["pymongo>=4,<5", "motor>=3,<4"]
# the SqsTransport backend (AWS SQS FIFO; works against LocalStack with no AWS account).
# boto3 drives the sync transport; aioboto3 (aiobotocore) drives the native async one.
sqs = ["boto3>=1.26", "aioboto3>=12"]
# the DynamoDBStore backend (AWS serverless; pairs with sqs for an all-AWS stack;
# works against LocalStack / moto with no AWS account — tests use moto/aiomoto from dev).
# boto3 drives the sync store; aioboto3 (aiobotocore) drives the native async one.
dynamodb = ["boto3>=1.26", "aioboto3>=12"]
# the DSL language server (editor diagnostics over parse() + validate()); the
# VSCode extension in editor/vscode/ launches `python -m harel.lsp`
lsp = ["pygls>=1.3,<2"]
# the monitoring TUI (`harel monitor` / `python -m harel.tui`): list + drill into
# executions over any store backend, with the statechart tree + control plane
tui = ["textual>=0.60"]
# remote actions: lambda_action (boto3) + openfaas_action (requests). The client is
# what this process needs; the function side imports only harel.faas.handler. Unit
# tests use a fake in-process invoke (no Docker); RIE/LocalStack are opt-in `stack`.
faas = ["boto3>=1.26", "requests>=2,<3"]

[project.scripts]
harel = "harel.cli:main"
harel-lsp = "harel.lsp:main"
harel-fmt = "harel.fmt:main"
harel-tui = "harel.tui:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "sphinx",
    "myst-parser",
    "sphinxcontrib-mermaid",
    "fakeredis>=2.36.0",
    "mongomock>=4.1",
    # MongoStore/MongoTransport import `pymongo` (e.g. ReturnDocument); mongomock only
    # supplies the client, so the unit tests need pymongo present even without a server
    "pymongo>=4,<5",
    "pygls>=1.3,<2",
    "moto>=5.2.1",
    "textual>=0.60",
    "pytest-asyncio>=0.24",
    "aioboto3>=12",
    # moto-backed mocking for aiobotocore (aioboto3): plain moto.mock_aws patches
    # botocore's HTTP send, which aiobotocore bypasses (it uses aiohttp), so the native
    # async AWS backends need aiomoto to mock in-process — no LocalStack/Docker
    "aiomoto>=0.5",
    "httpx>=0.27",
    "motor>=3,<4",
    "psycopg-pool>=3,<4",
    # libSQL store/transport tests run in-process against a local file (no server)
    "libsql>=0.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/harel"]
# the DSL grammar is a data file the parser loads at import time
artifacts = ["src/harel/dsl/grammar.lark"]

[tool.pytest.ini_options]
# src is the package root; test/ holds modules that import each other by bare name;
# deploy/ holds demo_actions referenced by the docker-compose stack's machines
pythonpath = ["src", "test", "deploy"]
testpaths = ["test"]
# `stack`-marked tests need the docker-compose stack running (see deploy/README.md);
# they are opt-in (run as the compose `test` service). The transport/store logic is
# covered deterministically by the fakeredis tests, which run by default.
markers = ["stack: end-to-end tests needing the running docker-compose stack (real Redis/Postgres)"]
addopts = "-m 'not stack'"
# the TUI tests drive Textual's async Pilot; auto-mode runs `async def` tests with no marker
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# Long lines are mostly intentional f-string log messages; the formatter wraps real code.
ignore = ["E501"]

[tool.ruff.lint.isort]
# Standard isort layout (ruff defaults, formatter-compatible); just declare the
# first-party package so the local import section is grouped correctly.
known-first-party = ["harel"]

[tool.mypy]
files = ["src"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
# Legacy codebase: start lenient and tighten over time.
check_untyped_defs = true
